# gpt4all_rag_app

./: .gitignore  README.md  gradio_interface.py  pyproject.toml
app/models/: query_model.py
app/services/: document_service.py  query_service.py
app/utils/: embedding_generator.py  pdf_extractor.py
